# learning-haskell-fp

./: .gitignore  CHANGELOG.md  GHCI.md  LICENSE  README.md  learning-haskell-fp.cabal  readme.md
app/: B01.hs  Main.hs  U01.hs  U02.hs  X01.hs  X02.hs  X03.hs  X04.hs  X05.hs  X06.hs  X07.hs  X08.hs  X09.hs  X10.hs  X11.hs  X12.hs  X13.hs  X13g.hs  X14.hs  X14hangman.hs  X15.hs  X16.hs  X17.hs  Y01.hs  Y02.hs  Y02Data.hs  Y02Types.hs  Y04.hs  Y05.hs  Y06.hs  Y07.hs  Y07Monads1.hs  Y08.hs  Y08Monads2.hs  Y09.hs  Y09Monads3.hs  Y09Monads3A.hs  Y09Monads3B.hs  Y10.hs  Y10Monads4.hs  (+9 more)
