cabal-version:      3.0
name:               learning-haskell-fp
version:            0.1.0.0
synopsis:           learning haskell
description:        Graham Hutton FP course
author:             Alexey Rykhalskiy
maintainer:         alexey.rykhalskiy@gmail.com
build-type:         Simple
common warnings
    ghc-options: -Wall

executable learning-haskell-fp
    import:           warnings
    main-is:          Main.hs
    other-modules:    
        X01, X02, X03, X04, X05,
        X06, X07, X08, X09, X10,
        X11, X12, X13, X13g, X14, X14hangman, 
        X15, X16, X17,
        Y01, Y02, Y02Data, Y02Types,
        Y04, Y05,
        Y06, Y07, Y08, Y09, Y10,
        Y11, Y12, Y13, Y14, Y15
    other-extensions:
    build-depends:    base ^>=4.19.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
